# C-Python-Vue-3-FedAvg-

./: README.md
cpp_server/: CMakeLists.txt  FedAvgServer.cpp  FedAvgServer.h  main.cpp
python_clients/: client_api_server.py  config.py  data_loader.py  gnn_model.py  requirements.txt  start_clients.py  trainer.py
vue_frontend/: index.html  package.json  vite.config.js
vue_frontend/src/: App.vue  style.css
vue_frontend/src/components/: ClientStatus.vue  ControlPanel.vue  LossChart.vue
vue_frontend/src/stores/: clients.js
